--- a/website.html
+++ b/website.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Bidmak | Home</title>
+        <style>
+            body {
+                color: pink;
+                text-align: center;
+                font-size: 20px;
+                font-weight: bold;
+            }
+        </style>
     </head>
     <body>
         welcome to my website
