--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 text-align: center;
                 font-size: 20px;
                 font-weight: bold;
+                background-color: springgreen;
             }
         </style>
     </head>
